<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_A"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:id="@+id/question_text_view"
        android:gravity="center"
        tools:text="@string/question_sc"

    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/true_button"
            android:layout_marginEnd="20dp"
            />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/false_button"
           />



    </LinearLayout>
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        />
    <ImageView
        android:id="@+id/world"
        android:layout_width="103dp"
        android:layout_height="154dp"
        android:layout_marginTop="75dp"
        android:maxWidth="176dp"
        android:maxHeight="87dp"
        android:src="@drawable/clipart16901" android:contentDescription="@string/app_name" />

</LinearLayout>


